--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ function makeCode () {
 	var fn = document.getElementById("fn")
 	var ln = document.getElementById("ln")
 	var name = document.getElementById("name")
+	var notes = document.getElementById("notes")
 	
 	button.onclick = function () {
 		var elText = fn.value + "," + ln.value + "," + name.value;
